fix(core): clip app element overflow content (#8689)

--- a/packages/frontend/component/src/theme/global.css
+++ b/packages/frontend/component/src/theme/global.css
@@ -273,7 +273,8 @@ affine-block-hub {
 }
 
 html,
-body {
+body,
+#app {
   height: 100%;
   position: relative;
   overflow: clip;
